<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        style="@style/layout_50v"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:contentDescription="@string/analyst_desc"
            android:scaleType="fitXY" >
        </ImageView>

        <com.cisa.androidapp.views.CropView
            android:id="@+id/cropView"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:scaleType="fitXY" />
        <com.cisa.androidapp.views.SelectionPreview
            android:id="@+id/selectionPreview"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:scaleType="fitXY" />
    </RelativeLayout>

    <LinearLayout
        style="@style/layout_50v"
        android:orientation="vertical" >

        <LinearLayout
            style="@style/weight_20"
            android:orientation="horizontal" >

            <LinearLayout
                style="@style/weight_60"
                android:layout_gravity="center"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textView1"
                    style="?android:attr/bottomDark"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/radioTitle" />
                <ScrollView
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:scrollbars="none">
                    <RadioGroup
                        android:id="@+id/radioObject"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="5dp" >

                        <RadioButton
                            android:id="@+id/radioPlant"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:onClick="onRadioClick"
                            android:text="@string/plant" />

                        <RadioButton
                            android:id="@+id/radioWater"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:onClick="onRadioClick"
                            android:text="@string/water" />

                        <RadioButton
                            android:id="@+id/radioDebris"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:onClick="onRadioClick"
                            android:text="@string/debris" />

                        <RadioButton
                            android:id="@+id/radioDry"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:onClick="onRadioClick"
                            android:text="@string/dry" />

                        <RadioButton
                            android:id="@+id/radioWet"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:onClick="onRadioClick"
                            android:text="@string/wet" />

                        <RadioButton
                            android:id="@+id/radioVegetation"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:onClick="onRadioClick"
                            android:text="@string/vegetation" />
                    </RadioGroup>
                </ScrollView>
            </LinearLayout>
            <LinearLayout
                style="@style/weight_40"
                android:orientation="vertical" >

                <LinearLayout
                    style="@style/weight_80"
                    android:orientation="horizontal"
                    android:weightSum="100" >

                    <Button
                        android:id="@+id/saveRegion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:background="#ff249217"
                        android:onClick="addRegion"
                        android:padding="0dp"
                        android:text="@string/mark_text"
                        android:textColor="#FFFFFF" />

                </LinearLayout>
                <LinearLayout
                    style="@style/weight_40"
                    android:orientation="vertical" >
                    <LinearLayout
                        style="@style/weight_20"
                        android:orientation="vertical" >

                        <ListView
                            android:id="@+id/regionResult"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp" >
                        </ListView>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            style="@style/weight_80"
            android:layout_margin="0dp"
            android:orientation="horizontal"
            android:padding="0dp"
            android:weightSum="100" >

            <Button
                android:id="@+id/reset"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_margin="0dp"
                android:layout_weight="33.33"
                android:background="#ff1a6dff"
                android:onClick="OnClickReset"
                android:padding="0dp"
                android:text="@string/reset"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/info"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="33.33"
                android:background="#ff380304"
                android:onClick="viewInfo"
                android:text="@string/info"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/upload"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="33.33"
                android:background="#ff278e0a"
                android:onClick="uploadDetails"
                android:text="@string/submit_msg"
                android:textColor="#FFFFFF" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
